Profile fragment and edit fragment activity design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FFD071</color>
     <color name="green">#1EC357</color>
+    <color name="gray">#C6C6C6</color>
 </resources>
