Edit profile changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="orange">#FFD071</color>
     <color name="green">#1EC357</color>
     <color name="gray">#C6C6C6</color>
+    <color name="light_green">#D0FDD2</color>
 </resources>
