--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,21 +36,21 @@
 
 
         <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/edit_profile_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@drawable/round_btn"
-            android:src="@drawable/ic_edit"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/username"
-            app:layout_constraintTop_toBottomOf="@+id/username" />
-
-        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/settings_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/round_btn"
             android:src="@drawable/ic_settings"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/username"
+            app:layout_constraintTop_toBottomOf="@+id/username" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/history_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/round_btn"
+            android:src="@drawable/ic_history"
             app:layout_constraintEnd_toStartOf="@+id/username"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/username" />
@@ -59,25 +59,25 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Settings"
+            android:text="History"
             android:textAllCaps="true"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/username"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/settings_button" />
+            app:layout_constraintTop_toBottomOf="@+id/history_button" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edit info"
+            android:text="Settings"
             android:textAllCaps="true"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/username"
-            app:layout_constraintTop_toBottomOf="@+id/edit_profile_button" />
+            app:layout_constraintTop_toBottomOf="@+id/settings_button" />
 
 
         <androidx.appcompat.widget.AppCompatImageButton
@@ -87,8 +87,8 @@
             android:background="@drawable/round_btn"
             android:src="@drawable/ic_plus"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/edit_profile_button"
-            app:layout_constraintStart_toEndOf="@+id/settings_button"
+            app:layout_constraintEnd_toStartOf="@+id/settings_button"
+            app:layout_constraintStart_toEndOf="@+id/history_button"
             app:layout_constraintTop_toBottomOf="@+id/username"
             app:layout_constraintVertical_bias="0.120000005" />
 
