--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -139,9 +139,19 @@
         app:layout_constraintStart_toEndOf="@id/email_address"
         app:layout_constraintTop_toTopOf="@id/email_address" />
 
+    <TextView
+        android:id="@+id/error_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textColor="@color/red"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/change_password_button"/>
+
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/reset_password_button"
+        android:id="@+id/change_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Change password"
