--- a/app/src/main/res/layout/change_password_dialog.xml
+++ b/app/src/main/res/layout/change_password_dialog.xml
@@ -36,6 +36,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/new_password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true">
