--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="green">#1EC357</color>
     <color name="gray">#C6C6C6</color>
     <color name="light_green">#D0FDD2</color>
+    <color name="red">#ED3123</color>
 </resources>
