--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -68,7 +68,7 @@
         android:background="@color/gray"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:text="About you"
+        android:text="@string/about_you"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,13 +79,14 @@
         android:id="@+id/user_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="About you"
+        android:hint="@string/about_you"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         app:layout_constraintEnd_toStartOf="@id/about_you_apply"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/about_you_text" />
+        app:layout_constraintTop_toBottomOf="@id/about_you_text"
+        android:autofillHints="" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/about_you_apply"
@@ -107,7 +108,7 @@
         android:background="@color/gray"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:text="Email address"
+        android:text="@string/email_address"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,13 +119,14 @@
         android:id="@+id/email_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Email address"
+        android:hint="@string/email_address"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         app:layout_constraintEnd_toStartOf="@id/email_address_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_address_text" />
+        app:layout_constraintTop_toBottomOf="@id/email_address_text"
+        android:autofillHints="" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/email_address_button"
@@ -154,7 +156,8 @@
         android:id="@+id/change_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change password"
+        android:text="@string/change_password"
+        android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email_address"
@@ -167,12 +170,23 @@
         android:id="@+id/verified_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
-        android:text="lorem_ipsum"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@id/sign_out_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/sign_out_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_out"
+        android:layout_margin="0dp"
+        android:textAllCaps="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
