--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -79,14 +79,14 @@
         android:id="@+id/user_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autofillHints="@string/about_you"
         android:hint="@string/about_you"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         app:layout_constraintEnd_toStartOf="@id/about_you_apply"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/about_you_text"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@id/about_you_text" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/about_you_apply"
@@ -119,14 +119,14 @@
         android:id="@+id/email_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autofillHints="@string/email_address"
         android:hint="@string/email_address"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         app:layout_constraintEnd_toStartOf="@id/email_address_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_address_text"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@id/email_address_text" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/email_address_button"
@@ -147,24 +147,24 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textColor="@color/red"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/change_password_button"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/change_password_button" />
 
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/change_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/change_password"
-        android:textAllCaps="false"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_address"
         android:layout_marginTop="10dp"
         android:background="@color/gray"
         android:paddingStart="10dp"
-        android:paddingEnd="10dp"/>
+        android:paddingEnd="10dp"
+        android:text="@string/change_password"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email_address" />
 
     <TextView
         android:id="@+id/verified_account"
@@ -181,12 +181,12 @@
         android:id="@+id/sign_out_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_out"
         android:layout_margin="0dp"
+        android:text="@string/sign_out"
         android:textAllCaps="false"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
