--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,22 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Create an account"
-        android:textSize="25sp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/email_input_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
+    tools:context=".SignInActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/email_input_layout"
@@ -34,7 +19,7 @@
         app:layout_constraintVertical_chainStyle="packed">
 
         <EditText
-            android:id="@+id/register_email"
+            android:id="@+id/sign_in_email"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:autofillHints="Email Address"
@@ -43,21 +28,20 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/sign_in_with_email_and_password_button"
         app:layout_constraintEnd_toEndOf="@id/email_input_layout"
         app:layout_constraintStart_toStartOf="@id/email_input_layout"
         app:layout_constraintTop_toBottomOf="@id/email_input_layout"
         app:passwordToggleEnabled="true">
 
         <EditText
-            android:id="@+id/register_password"
+            android:id="@+id/sign_in_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:autofillHints="Password"
@@ -67,16 +51,55 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/register_button"
+        android:id="@+id/sign_in_with_email_and_password_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:text="Sign in"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@id/sign_in_with_google_button"
+        app:layout_constraintEnd_toEndOf="@id/email_input_layout"
+        app:layout_constraintStart_toStartOf="@id/email_input_layout"
+        app:layout_constraintTop_toBottomOf="@id/password_input_layout" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_with_google_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/create_account_text"
+        app:layout_constraintEnd_toEndOf="@id/email_input_layout"
+        app:layout_constraintStart_toStartOf="@id/email_input_layout"
+        app:layout_constraintTop_toBottomOf="@id/sign_in_with_email_and_password_button" />
+
+    <TextView
+        android:id="@+id/create_account_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:text="Don't have an account?"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@id/create_account_button"
+        app:layout_constraintEnd_toEndOf="@id/email_input_layout"
+        app:layout_constraintStart_toStartOf="@id/email_input_layout"
+        app:layout_constraintTop_toBottomOf="@id/sign_in_with_google_button" />
+
+    <Button
+        android:id="@+id/create_account_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
+        android:layout_marginBottom="16dp"
         android:text="Register"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="@id/email_input_layout"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@id/email_input_layout"
+        app:layout_constraintTop_toBottomOf="@+id/create_account_text" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
