--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="gray">#C6C6C6</color>
     <color name="light_green">#D0FDD2</color>
     <color name="red">#ED3123</color>
+    <color name="fade_black">#454545</color>
 </resources>
