Swap functionality added

--- a/app/src/main/res/drawable/background_right.xml
+++ b/app/src/main/res/drawable/background_right.xml
@@ -3,8 +3,9 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="30dp"
-        android:bottomRightRadius="0dp"/>
+        android:radius="20dp"
+        android:bottomRightRadius="0dp"
+        android:bottomLeftRadius="0dp"/>
 
     <solid
         android:color="#CCCDCD"/>
