--- a/app/src/main/res/layout/swipe_card_item.xml
+++ b/app/src/main/res/layout/swipe_card_item.xml
@@ -45,8 +45,10 @@
 
     <ImageView
         android:id="@+id/thumbnail_image_swipe_view"
-        android:layout_width="250dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
