--- a/app/src/main/res/drawable/background_left.xml
+++ b/app/src/main/res/drawable/background_left.xml
@@ -3,10 +3,11 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="30dp"
-        android:bottomLeftRadius="0dp"/>
+        android:radius="20dp"
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp"/>
 
     <solid
-        android:color="#77A344"/>
+        android:color="@color/orange"/>
 
 </shape>
