--- a/app/src/main/res/layout/swap_item.xml
+++ b/app/src/main/res/layout/swap_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="30dp"
+    android:layout_marginStart="20dp"
     android:elevation="10dp"
     app:cardCornerRadius="2dp">
 
@@ -11,14 +11,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Status"
+            android:layout_marginTop="2dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <ImageView
             android:id="@+id/my_book_image"
-            android:layout_width="150dp"
+            android:layout_width="170dp"
             android:layout_height="100dp"
+            android:layout_marginTop="4dp"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/status" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
@@ -44,13 +55,40 @@
 
         <ImageView
             android:id="@+id/user_book_image"
-            android:layout_width="150dp"
+            android:layout_width="170dp"
             android:layout_height="100dp"
             android:layout_marginTop="5dp"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintEnd_toEndOf="@id/my_book_image"
             app:layout_constraintStart_toStartOf="@id/my_book_image"
             app:layout_constraintTop_toBottomOf="@id/user_image" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/decline_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/decline_button"
+            android:src="@drawable/ic_accept"
+            android:rotation="180"
+            android:rotationY="180"
+            app:layout_constraintTop_toTopOf="@id/accept_button"
+            app:layout_constraintBottom_toBottomOf="@id/accept_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/accept_button"/>
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/accept_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:src="@drawable/ic_accept"
+            android:rotationY="180"
+            android:background="@drawable/accept_button"
+            app:layout_constraintTop_toBottomOf="@id/user_book_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/decline_button"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
