--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -26,7 +26,8 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image_message"
             android:layout_width="30dp"
-            android:layout_height="30dp" />
+            android:layout_height="30dp"
+            android:src="@drawable/ic_user"/>
 
             <TextView
                 android:id="@+id/username"
@@ -35,7 +36,7 @@
                 android:layout_marginStart="25dp"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:layout_marginLeft="25dp" />
+                android:text="@string/username" />
 
 
 <!--        </androidx.appcompat.widget.Toolbar>-->
